Chore: namespace 구조 단순화 및 참조 경로 통합

--- a/Assets/Framework/Core/Editor/AES.Tools.Editor.asmdef
+++ b/Assets/Framework/Core/Editor/AES.Tools.Editor.asmdef
@@ -2,7 +2,8 @@
   "name": "AES.Tools.Editor",
   "rootNamespace": "AES.Tools.Editor",
   "references": [
-    "AES.Tools"
+    "AES.Tools",
+    "Unity.Addressables.Editor"
   ],
   "includePlatforms": [
     "Editor"
