--- a/Assets/Framework/Core/Editor/AES.Tools.Editor.asmdef
+++ b/Assets/Framework/Core/Editor/AES.Tools.Editor.asmdef
@@ -3,7 +3,8 @@
   "rootNamespace": "AES.Tools.Editor",
   "references": [
     "AES.Tools",
-    "Unity.Addressables.Editor"
+    "Unity.Addressables.Editor",
+    "UniTask"
   ],
   "includePlatforms": [
     "Editor"
