IAP 상품 이름 규칙 변경, 특정 초기 캐시 골드 값 0으로 설정, 배너 광고 서비스 개선 및 로드시 정확한 높이 계산 추가, 팝업 실패 로직 광고 삽입, Splash Screen 설정 업데이트 및 번들 버전 갱신, Custom Gradle 템플릿 사용 설정, Unity Registry 추가 및 AppLovin MAX Unity 레지스트리 설정 추가

--- a/Assets/AES.Tools/Core/AES.Tools.asmdef
+++ b/Assets/AES.Tools/Core/AES.Tools.asmdef
@@ -14,7 +14,8 @@
     "MaxSdk.Scripts",
     "Unity.Purchasing",
     "Unity.Services.Core",
-    "SingularSDK"
+    "SingularSDK",
+    "Vibration"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
@@ -58,6 +59,11 @@
       "name": "com.gameanalytics.sdk",
       "expression": "",
       "define": "AESFW_ANALYTICS_GA"
+    },
+    {
+      "name": "com.benoitfreslon.vibration",
+      "expression": "",
+      "define": "PROJECT_INSTALLED_HAPTIC"
     }
   ],
   
